# GameEngine

./: CMakeLists.txt  conanfile.txt  generate_project_files.bat
.github/workflows/: clang-format-checker.yml  linux-build.yml  windows-build.yml  windows-test-runner.yml
Automation/ConanProfiles/: linuxDebug  linuxRelease  windowsDebug  windowsRelease
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Source/: main.cpp  pch.h
Engine/Source/Core/: Engine.cpp  Engine.h  utility.h
Engine/Source/Event/: event.h  inputevent.h
Engine/Source/Log/: log.cpp  log.h
Engine/Source/Window/: IWindow.h  IWindowManager.h
Engine/Source/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.h  GLFWWindowManager.cpp  GLFWWindowManager.h
Engine/Source/Window/WinApi/: WinAPIWindow.cpp  WinAPIWindow.h  WinAPIWindowManager.cpp  WinAPIWindowManager.h
Engine/Tests/: LogConceptTests.cpp  WindowTests.cpp
Engine_old/: CMakeLists.txt
Engine_old/Source/: main.cpp  pch.h
Engine_old/Source/Core/: Engine.cpp  Engine.h  utility.h
Engine_old/Source/Log/: log.h
Engine_old/Source/Window/GLFW/: GLFWWindow.h  GLFWWindowManager.cpp
